# SCUTSurface-code

./: .gitignore  .gitmodules  README.md
build_dataset/preprocessing/: README.md  batch_FPS_torch.py  batch_cgal_prepocessing_smooth.py  batch_pcl_remove_outliers.py  config_example.yaml  txt2ply.py
build_dataset/preprocessing/src/CGAL_Preprocess/: CMakeLists.txt  cgal_Preprocessing.cpp  install.sh
build_dataset/preprocessing/src/PCL/: CMakeLists.txt  PCL_Preprocessing_Outlier_Remove.cpp  install.sh
build_dataset/preprocessing/utils/: __init__.py  config.py
build_dataset/scan_and_synthesis/object_level/: README.md  blensor_scan_filename.py  camera_rotate_scan_batch.py  data_utils.py  estimate_normal_batch.py  synthetic_artifects_utils.py  synthetic_dataset_batch.py
build_dataset/scan_and_synthesis/scene_level/: README.md  camera_scan_vps.py  data_utils.py  get_viewpoints.py  synthetic_dataset_scene.py
metrics/: README.md
metrics/neural_metric/: Train.py  eval_two_folder.py  network.py  utils.py
metrics/neural_metric/save/T197_Scaled_net256_Adam/: epoch-1000.pth
metrics/vanilla_metric/: eval_two_folder.py  metrics.py
reconstruction/: README.md  resize.py
